# fuzzylogic_cartpole

./: LICENSE  MANIFEST.in  README.md  demo.py  manual_config.yaml  optimized_fuzzy_sets.yaml  optimized_fuzzy_sets_working.yaml  optimized_rules.csv  optimized_rules_working.yaml  pyproject.toml  requirements.txt  setup.py  train.py  walkthrough.bash
fuzzylogic_cartpole/: QUICK_REFERENCE.md  README_OPTIMIZATION.md  SUMMARY_EA_OPTIMIZATION.md  __init__.py  controller.py  defaults.py  demo_ea_optimization.py  example_optimize_minimal.py  optimize_fuzzy_sets_ea.py  optimize_rules_ea.py  rule_base_generation.py  test_ea_setup.py  test_optimized_rules.py  visualize_fuzzy_sets.py
